<resources>
    <string name="app_name">StopwatchAppV3</string>
    <string name="label_settings">Settings</string>
    <string name="label_history">History</string>
    <string name="label_stopwatch">Stopwatch</string>
    <string name="start">Start</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>
    <string name="stop">Stop</string>
    <string name="lap">Lap</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="start_all">Start all</string>
    <string name="add_sw">Add Stopwatch</string>
    <string name="neutralTime">00:00.0</string>
    <string name="neutralLap">Lap0</string>
    <string name="default_name">Marilena</string>
    <string name="zerozero">01</string>
    <string name="cons">:</string>
    <string name="point">.</string>
    <string name="zero">7</string>
</resources>