<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:elevation="8dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardViewLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/id_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/delete"
                android:text="01"
                android:textStyle="bold"
                android:textSize="28sp"
                app:layout_constraintTop_toTopOf="@id/time_tv"
                app:layout_constraintBottom_toBottomOf="@id/time_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/time_tv" />


            <TextView
                android:id="@+id/time_tv"
                android:layout_width="wrap_content"
                android:layout_height="44sp"
                android:fontFamily="@font/cour"
                android:text="@string/neutralTime"
                android:textColor="@color/text"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/lap_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lap_tv"
                android:layout_width="wrap_content"
                android:layout_height="32sp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/cour"
                android:text="@string/neutralTime"
                android:textColor="@color/text"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/time_tv"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/reset_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/disable"
                android:drawableLeft="@drawable/ic_reset"
                android:paddingStart="6dp"
                android:paddingTop="8dp"
                android:paddingEnd="10dp"
                android:paddingBottom="8dp"
                android:text="@string/reset"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/time_tv" />

            <Button
                android:id="@+id/startStop_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/start"
                android:drawableLeft="@drawable/ic_start"
                android:paddingStart="6dp"
                android:paddingTop="8dp"
                android:paddingEnd="10dp"
                android:paddingBottom="8dp"
                android:text="@string/start"
                android:textColor="@color/white"
                app:layout_constraintBaseline_toBaselineOf="@+id/reset_btn"
                app:layout_constraintEnd_toStartOf="@+id/lap_btn"
                app:layout_constraintStart_toEndOf="@+id/reset_btn" />

            <Button
                android:id="@+id/lap_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/disable"
                android:drawableLeft="@drawable/ic_lap"
                android:paddingStart="6dp"
                android:paddingTop="8dp"
                android:paddingEnd="10dp"
                android:paddingBottom="8dp"
                android:text="@string/lap"
                android:textColor="@color/white"
                app:layout_constraintBaseline_toBaselineOf="@+id/startStop_btn"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/disable"
                android:drawableLeft="@drawable/ic_save"
                android:paddingStart="6dp"
                android:paddingTop="8dp"
                android:paddingEnd="10dp"
                android:paddingBottom="8dp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@id/delete_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reset_btn" />

            <Button
                android:id="@+id/delete_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/disable"
                android:drawableLeft="@drawable/ic_delete"
                android:paddingStart="6dp"
                android:paddingTop="8dp"
                android:paddingEnd="10dp"
                android:paddingBottom="8dp"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/save_btn" />

            <LinearLayout
                android:id="@+id/layout_lapList"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginBottom="4dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lap_btn" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>